--- a/styles/style.css
+++ b/styles/style.css
@@ -2,25 +2,26 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Lato';
+  font-family: "Lato";
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'Lato';
-  src: url(/fonts/Lato-Bold.ttf) format(truetype)
+  font-family: "Lato";
+  src: url(/fonts/Lato-Bold.ttf) format("truetype");
 }
 
 @font-face {
-  font-family: 'Lato';
-  src: url(/fonts/Lato-Regular.ttf) format(truetype);
+  font-family: "Lato";
+  src: url(/fonts/Lato-Regular.ttf) format("truetype");
 }
 
 .wrapper-header {
   display: flex;
   flex-direction: column;
   width: 100%;
-  background: linear-gradient( #ff403a50 100%, #f75e05a8 100%);
+  background: linear-gradient(#ff403a50 100%, #f75e05a8 100%);
+  margin: 0 0 120px 0;
 }
 
 #logo {
@@ -30,15 +31,17 @@
 }
 
 body {
-  width: 1200px;
+  max-width: 1920px;
   margin: 0 auto;
 }
 
 .header-nav {
+  width: 1230px;
+  margin: 0 auto;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
-  font: 700 16px 'Lato';
+  font: 700 16px "Lato";
 }
 
 .header-nav ul {
@@ -72,7 +75,7 @@ body {
   padding: 0;
   width: 256px;
   height: 52px;
-  background: linear-gradient(55.95deg, #FF3F3A 0%, #F75E05 100%);
+  background: linear-gradient(55.95deg, #ff3f3a 0%, #f75e05 100%);
   border-radius: 4px;
   color: white;
 }
@@ -88,15 +91,518 @@ body {
 }
 
 .text-header h1 {
-  font: 900 46px 'Lato';
+  font: 900 46px "Lato";
   width: 1020px;
   margin: auto;
   text-align: center;
 }
 
-.text-header p{
-  font: 700 16px 'Lato';
-  color: #FF3F3A;
+.text-header p {
+  font: 700 16px "Lato";
+  color: #ff3f3a;
   text-align: center;
   text-transform: uppercase;
+}
+
+main {
+  width: 1230px;
+  margin: 0 auto;
+}
+
+.talk-about {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
+  margin: 0 0 200px 0;
+}
+
+.left-side {
+  width: 600px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.left-side h1 {
+  font: 900 46px "Lato";
+  margin: 0 0 40px 0;
+}
+
+.theme {
+  display: flex;
+  flex-direction: column;
+  margin: 0 0 24px 0;
+}
+
+.header-theme {
+  width: 440px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0 0 16px 0;
+}
+
+.blue-par {
+  font: 700 20px "Lato";
+  color: #1e212c;
+}
+
+.theme-red {
+  font: 400 20px "Lato";
+  color: #ff3f3a;
+  margin: 0 20px 0 0;
+}
+
+.header-text {
+  display: flex;
+}
+
+.minus-theme {
+  background: url(/assets/minus.svg);
+  width: 19px;
+  height: 2px;
+}
+
+.under {
+  font: 400 16px "Lato";
+  color: #424551;
+  padding: 0 0 0 40px;
+}
+
+.right-side {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 495px;
+  padding: 32px 40px;
+  border: 1px solid #e5e8ed;
+  box-shadow: 0px 80px 80px -20px rgba(154, 156, 165, 0.08),
+    0px 30px 24px -10px rgba(154, 156, 165, 0.05),
+    0px 12px 10px -6px rgba(154, 156, 165, 0.04),
+    0px 4px 4px -4px rgba(30, 33, 44, 0.03);
+  border-radius: 4px;
+}
+
+.title-time {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 90px;
+}
+
+.header-title {
+  color: #1e212c;
+  font: 700 14px "Lato";
+}
+
+.red-time {
+  color: #ff3f3a;
+  font: 700 24px "Lato";
+}
+
+.light {
+  color: #787a80;
+  font: 400 16px "Lato";
+}
+
+.title-price {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 116px;
+}
+
+.event {
+  font: 700 14px "Lato";
+  color: #ff3f3a;
+  text-transform: uppercase;
+}
+
+.btn-join {
+  width: 100%;
+  height: 44px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: linear-gradient(55.95deg, #ff3f3a 0%, #f75e05 100%);
+  border-radius: 4px;
+  color: white;
+}
+
+.bg-yellow {
+  position: relative;
+  width: 495px;
+  height: 580px;
+  background: #ffcf2d;
+  border-radius: 4px;
+}
+
+.speaker {
+  display: flex;
+  justify-content: space-between;
+  margin: 0 0 180px 0;
+}
+
+.about-speaker {
+  width: 600px;
+  height: 450px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.img-speaker {
+  position: absolute;
+  bottom: 0;
+  left: 20px;
+  width: 458px;
+  height: 600px;
+  background: url(/assets/speaker.png) no-repeat;
+}
+
+.about-speaker h1 {
+  font: 900 46px "Lato";
+  color: #1e212c;
+}
+
+.analyst {
+  color: #787a80;
+  font: 400 20px "Lato";
+}
+
+.title-speaker {
+  font: 700 16px "Lato";
+  color: #1e212c;
+}
+
+.about-her {
+  font: 400 16px "Lato";
+  color: #424551;
+}
+
+.del,
+.sentinal,
+.national {
+  width: 105px;
+  height: 50px;
+}
+
+.flex-logos {
+  display: flex;
+  width: 395px;
+  justify-content: space-between;
+}
+
+.del {
+  background: url(/assets/del.svg) no-repeat;
+}
+
+.sentinal {
+  background: url(/assets/sentinal.svg) no-repeat;
+}
+
+.national {
+  background: url(/assets/national.svg) no-repeat;
+}
+
+.links {
+  display: flex;
+  justify-content: space-between;
+  width: 244px;
+}
+
+.facebook,
+.inst,
+.twitter,
+.linkedin {
+  width: 24px;
+  height: 24px;
+}
+
+.facebook {
+  background: url(/assets/Facebook.svg) no-repeat;
+}
+
+.inst {
+  background: url(/assets/Instagram.svg) no-repeat;
+}
+
+.twitter {
+  background: url(/assets/Twitter.svg) no-repeat;
+}
+
+.linkedin {
+  background: url(/assets/Linked-In.svg) no-repeat;
+}
+
+.for-whom {
+  display: flex;
+  justify-content: space-between;
+  margin: 0 0 200px 0;
+}
+
+.left-text {
+  width: 495px;
+}
+
+.left-text h1 {
+  font: 900 46px "Lato";
+  color: #1e212c;
+}
+
+.for-whom .right {
+  width: 600px;
+  height: 190px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.row-check {
+  display: flex;
+  align-items: center;
+  width: 100%;
+}
+
+.logo-check {
+  margin: 0 20px 0 0;
+  width: 20px;
+  height: 20px;
+  background: url(/assets/Vector.svg) no-repeat;
+}
+
+.row-check {
+  font: 700 20px "Lato";
+  color: #424551;
+}
+
+.wrapper-form {
+  display: flex;
+  width: 100%;
+}
+
+.form {
+  width: 100%;
+  background: linear-gradient(#ff403a50 100%, #f75e05a8 100%);
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  /* padding-left: 103px; */
+  padding-bottom: 60px;
+  padding-top: 60px;
+  margin: 0 0 120px 0;
+}
+
+.illustration {
+  width: 308px;
+  height: 234px;
+  background: url(/assets/illustration.svg) no-repeat;
+}
+
+.do-not-miss {
+  display: flex;
+  width: 600px;
+  flex-direction: column;
+}
+
+.do-not-miss h1 {
+  font: 900 32px "Lato";
+  color: #1e212c;
+  margin: 0 0 48px 0;
+}
+
+.input-email {
+  width: 600px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.input-email input {
+  width: 422px;
+  height: 52px;
+  background: #ffffff;
+  border: 1px solid #d7dadd;
+  border-radius: 4px;
+}
+
+.input-email input::placeholder {
+  padding: 13px 0 13px 16px;
+  font: 400 16px "Lato";
+}
+
+.btn-sub {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 154px;
+  height: 52px;
+  background: linear-gradient(55.95deg, #ff3f3a 0%, #f75e05 100%);
+  border-radius: 4px;
+  color: white;
+  font: 700 16px "Lato";
+}
+
+.request {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0 0 120px 0;
+}
+
+.request-form {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.request-form h1 {
+  margin: 8px 0 0 0;
+  font: 900 46px "Lato";
+  color: #1e212c;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 505px;
+  height: 458px;
+}
+
+form p {
+  font: 400 16px "Lato";
+  color: #1e212c;
+  margin: 40px 0 0 0;
+}
+
+form input {
+  background: #ffffff;
+  border: 1px solid #d7dadd;
+  border-radius: 4px;
+  width: 100%;
+  height: 52px;
+}
+
+form div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: linear-gradient(55.95deg, #ff3f3a 0%, #f75e05 100%);
+  border-radius: 4px;
+  width: 100%;
+  height: 52px;
+  color: white;
+  margin: 40px 0 0 0;
+}
+
+.man {
+  width: 600px;
+  height: 468px;
+  background: url(/assets/man.svg) no-repeat;
+}
+
+.interested {
+  position: absolute;
+  left: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 100%;
+  background: #f4f5f7;
+  margin: 0 auto;
+  padding-bottom: 180px;
+}
+
+.interested h1 {
+  font: 900 46px "Lato";
+  color: #1e212c;
+  margin: 8px 0 60px 0;
+}
+
+.wrapper-interests {
+  width: 100%;
+  padding-top: 100px;
+  margin: 0 auto;
+  padding-left: 345px;
+  padding-right: 345px;
+}
+
+.cards {
+  display: flex;
+  justify-content: space-between;
+  margin: 0 0 80px 0;
+}
+
+.card {
+  background: #ffffff;
+  border: 1px solid #e5e8ed;
+  box-shadow: 0px 80px 80px -20px rgba(154, 156, 165, 0.08),
+    0px 30px 24px -10px rgba(154, 156, 165, 0.05),
+    0px 12px 10px -6px rgba(154, 156, 165, 0.04),
+    0px 4px 4px -4px rgba(30, 33, 44, 0.03);
+  border-radius: 4px;
+  width: 390px;
+  height: 323px;
+  display: flex;
+  flex-direction: column;
+  padding: 24px;
+}
+
+.card .red {
+  font: 700 28px 'Lato';
+  color: #ff3f3a;
+  margin: 0 0 8px 0;
+}
+
+.card .grey {
+  font: 400 14px 'Lato';
+  color: #787a80;
+  margin: 0 0 30px 0;
+}
+
+.grey.bigMargin {
+  margin: 0 0 60px 0;
+}
+
+.card .about-card {
+  font: 700 18px 'Lato';
+  margin: 0 0 12px 0;
+  color: #1e212c;
+}
+
+.btn-view-more {
+  width: 100%;
+  height: 52px;
+  background: #FFFFFF;
+  border: 1px solid #E5E8ED;
+  box-shadow: 0px 80px 80px -20px rgba(154, 156, 165, 0.08), 0px 30px 24px -10px rgba(154, 156, 165, 0.05), 0px 12px 10px -6px rgba(154, 156, 165, 0.04), 0px 4px 4px -4px rgba(30, 33, 44, 0.03);
+  border-radius: 4px;
+  border: 1px solid #FF3F3A;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color:  #ff3f3a;
+}
+
+.more-flex {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.more {
+  font: 700 28px 'Lato';
+  margin: 0 40px 0 0;
+  text-align: center;
+}
+
+.explore-btn {
+  width: 214px;
+  height: 52px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  background: linear-gradient(55.95deg, #FF3F3A 0%, #F75E05 100%);
+  border-radius: 4px;
 }
